--- a/client/scss/LoginPage.scss
+++ b/client/scss/LoginPage.scss
@@ -3,30 +3,40 @@
     flex-direction: column;
     align-items:center;
     justify-content: center;
-    background-color: #f4f4;
+    background: color #f0f0f0;
 }
 
 .login-header {
-
+    font-size: 2.5rem;
+    font-weight: bold;
+    text-align: center;
+    color: #333;
 }
 
-.yosmite-image {
+.alpaca-image {
+    width: 100%;
+    height: 1;
+}
 
+.yosemite-image {
+    width: 30%;
+    height: 50%
 }
 
 .username-subhead{
-
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #333;
 }
 
 .username-section {
-
 }
 .password-section {
 
 }
 
 .login-button {
-
+    text-align: center;
 }
 
 .signup-button {
