--- a/client/scss/LoginPage.scss
+++ b/client/scss/LoginPage.scss
@@ -1,26 +1,32 @@
+
 .login-page {
     display: flex;
     flex-direction: column;
     align-items:center;
     justify-content: center;
-    background: color #f0f0f0;
+    height: 100vh;
+    background-color: lightblue;
 }
 
 .login-header {
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: bold;
+    // margin-bottom: 1rem;
     text-align: center;
     color: #333;
 }
 
 .alpaca-image {
-    width: 100%;
-    height: 1;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .yosemite-image {
     width: 30%;
-    height: 50%
+    height: 30%
 }
 
 .username-subhead{
