--- a/client/scss/NewTripPage.scss
+++ b/client/scss/NewTripPage.scss
@@ -1,6 +1,11 @@
+title {
+    display: flex;
+    align-items: center;
+}
+
 .new-trip-page{
     display: flex;
-    background-color: darkseagreen;
+    background-color: white;
     align-items:center;
     justify-content: center;
 }
@@ -9,27 +14,31 @@
 .container {
     display: flex;
     flex-direction: column;
-    background-color: lightgray;
+    border-radius: 8px;
+    border-color: lightgray;
+    background-color: white;
     align-items:center;
+    
     justify-content: center;
 }
 
 //multiple text boxes
 .new-trip-text {
-    width: 25%;
+    font-family: "Monaco", monospace;
     border-color: black;
+    border-radius: 8px;
 }
 
 .create-trip-button{
-        border-radius: 8px;
+        // border-radius: 8px;
         // border: 1px solid transparent;
-        padding: 0.6em 1.2em;
-        font-size: 1em;
-        font-weight: 500;
-        font-family: inherit;
+        // padding: 0.6em 1.2em;
+        // font-size: 1em;
+        // font-weight: 500;
+        // font-family: inherit;
         background-color: darkseagreen;
-        cursor: pointer;
-        transition: border-color 0.25s;
+        // cursor: pointer;
+        // transition: border-color 0.25s;
 }  
       button:hover {
         border-color:  green;
