--- a/client/scss/LoginPage.scss
+++ b/client/scss/LoginPage.scss
@@ -6,7 +6,7 @@
     justify-content: center;
     height: 100vh;
     background-color: lightblue;
-    background-image: url('../assets/yosemite.jpg');
+    background-image: url('https://4kwallpapers.com/images/wallpapers/os-x-yosemite-half-dome-yosemite-national-park-yosemite-4480x2520-4047.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -22,9 +22,6 @@
 .alpaca-image {
     width: 50px;
     height: 50px;
-    position: absolute;
-    top: 0;
-    left: 0;
 }
 
 .yosemite-image {
