--- a/client/scss/LoginPage.scss
+++ b/client/scss/LoginPage.scss
@@ -20,14 +20,16 @@
 }
 
 .alpaca-image {
-    width: 50px;
-    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 20vh;
 }
 
-.yosemite-image {
-    width: 25rem;
-    // height: auto
-}
+// .yosemite-image {
+//     width: 25rem;
+//     // height: auto
+// }
 
 .username-subhead{
     font-size: 1.5rem;
@@ -60,6 +62,8 @@
 
 .login-button {
     text-align: center;
+    margin-bottom: 1rem;
+    
 }
 
 .signup-button {
