--- a/client/scss/LoginPage.scss
+++ b/client/scss/LoginPage.scss
@@ -32,7 +32,7 @@
 // }
 
 .username-subhead{
-    font-size: 1.5rem;
+    font-size: 1.75rem;
     font-weight: bold;
 
 }
@@ -63,9 +63,27 @@
 .login-button {
     text-align: center;
     margin-bottom: 1rem;
-    
+    font-size: 1.5rem;
 }
 
 .signup-button {
-
+    margin-top: 2rem;
+    text-align: center;
+    
+    button {
+      background-color: gray; /* Green */
+      border: none;
+      color: white;
+      padding: 0.5rem 1rem;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 1rem;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+    
+    button:hover {
+      background-color: #3e8e41;
+    }
 }
