--- a/client/scss/SignupPage.scss
+++ b/client/scss/SignupPage.scss
@@ -1,9 +1,14 @@
 .signup-page {
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
 }
 
 .signup-page-header {
-
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 50px;
 }
 
 .username-box {
