--- a/client/scss/SignupPage.scss
+++ b/client/scss/SignupPage.scss
@@ -3,13 +3,15 @@
     flex-direction: column;
     align-items: center;
     margin-top: 50px;
+    background-color: lightblue;
+    .signup-page-header {
+        font-size: 24px;
+        font-weight: bold;
+        margin-bottom: 50px;
+    }
+    
 }
 
-.signup-page-header {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 50px;
-}
 
 .username-box {
 
