--- a/client/scss/LoginPage.scss
+++ b/client/scss/LoginPage.scss
@@ -1,4 +1,58 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans&family=Poppins:wght@300;500;600;700;800&display=swap');
+
+// Primary font stack (sans-serif-based), for most UI elements
+$primary-font-stack: 'Merriweather Sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+	Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+// Secondary font stack (also sans-serif), for headings, buttons, and labels
+$secondary-font-stack: Poppins, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+	Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+
+button {
+	display: flex;
+	align-items: center;
+	flex-grow: 0;
+	flex-shrink: 0;
+	height: 3rem;
+	padding-inline: 30rem;
+    width: 30%;
+
+	border-radius: 6rem;
+	border: none;
+	outline: none;
+	
+	background: white;
+	color: rgba(22, 21, 21, 0.8);
+	cursor: pointer;
+
+	font-family: $secondary-font-stack;
+	font-weight: 800;
+	font-size: 1rem;
+	line-height: 1rem;
+	letter-spacing: 0.015em;
+
+	transition: filter 100ms linear;
+
+	&.icon-button {
+		display: inline-flex;
+
+		padding: 0;
+		width: 48rem;
+
+		justify-content: center;
+		align-items: center;
+	}
+
+	&:hover,
+	&:focus {
+		filter: brightness(0.9);
+	}
+	&:active {
+		filter: brightness(0.8);
+	}
+}
+
 .login-page {
     display: flex;
     flex-direction: column;
@@ -39,23 +93,25 @@
 .username-section {
     margin-bottom: 1rem;
     input {
-        width: 100%;
+        width: 93%;
         padding: 0.5rem;
         border-radius: 0.5rem;
         border: 1px solid #ccc;
         font-size: 1.2rem;
         font-family: Arial, sans-serif;
+        width: 93%;
       }
 }
 .password-section {
     margin-bottom: 1rem;
     input {
-        width: 100%;
+        width: 93%;
         padding: 0.5rem;
         border-radius: 0.5rem;
         border: 1px solid #ccc;
         font-size: 1.2rem;
         font-family: Arial, sans-serif;
+        width: 93%;
       }
 }
 
@@ -69,8 +125,8 @@
     margin-top: 2rem;
     text-align: center;
     
-    button {
-      background-color: gray; /* Green */
+
+    //   background-color: gray; /* Green */
       border: none;
       color: white;
       padding: 0.5rem 1rem;
@@ -80,7 +136,7 @@
       font-size: 1rem;
       cursor: pointer;
       border-radius: 5px;
-    }
+
     
     button:hover {
       background-color: #3e8e41;
