--- a/client/scss/NewTripPage.scss
+++ b/client/scss/NewTripPage.scss
@@ -1,3 +1,59 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans&family=Poppins:wght@300;500;600;700;800&display=swap');
+
+// Primary font stack (sans-serif-based), for most UI elements
+$primary-font-stack: 'Merriweather Sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+	Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+// Secondary font stack (also sans-serif), for headings, buttons, and labels
+$secondary-font-stack: Poppins, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+	Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+
+button {
+	display: flex;
+	align-items: center;
+    justify-content: center;
+	flex-grow: 0;
+	flex-shrink: 0;
+	height: 3rem;
+	padding-inline: 30rem;
+    width: 30%;
+
+	border-radius: 6rem;
+	border: none;
+	outline: none;
+	
+	background: white;
+	color: rgba(22, 21, 21, 0.8);
+	cursor: pointer;
+
+	font-family: $secondary-font-stack;
+	font-weight: 800;
+	font-size: 1rem;
+	line-height: 1rem;
+	letter-spacing: 0.015em;
+
+	transition: filter 100ms linear;
+
+	&.icon-button {
+		display: inline-flex;
+
+		padding: 0;
+		width: 48rem;
+
+		justify-content: center;
+		align-items: center;
+	}
+
+	&:hover,
+	&:focus {
+		filter: brightness(0.9);
+	}
+	&:active {
+		filter: brightness(0.8);
+	}
+}
+
 .new-trip-page{ 
     display: flex;
     flex-direction: column;
@@ -15,7 +71,7 @@
 .title {
     color: white;
     font-family: "Monaco", monospace;
-    font-size: 2rem;
+    font-size: 3rem;
     font-weight: bold;
     display: flex;
     align-items: center;
@@ -24,26 +80,34 @@
 
 .container {
     display: flex;
-    flex-direction: column;
+    // flex-direction: column;
     border-radius: 8px;
     border-color: lightgray;
     // background-color: white;
     align-items:center;
-    justify-content: center;
+    align-content: center
+    // justify-content: center;
 }
 
 .question {
+    display: flex;
+    justify-content: center;
     font-family: "Monaco", monospace;
     color: white;
-    flex-direction: column;
+    // flex-direction: column;
 }
 
 //multiple text boxes
 .new-trip-text {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    margin: auto;
     font-family: "Monaco", monospace;
     border-color: black;
     border-radius: 8px;
-    flex-direction: column;
+    width: 30%;
+    // flex-direction: column;
 }
 
 .create-trip-button{
@@ -52,7 +116,9 @@
         // padding: 0.6em 1.2em;
         // font-size: 1em;
         // font-family: inherit;
+
         background-color: darkseagreen;
+        width: 30%;
         // cursor: pointer;
         // transition: border-color 0.25s;
 }  
