--- a/client/scss/TripHome.scss
+++ b/client/scss/TripHome.scss
@@ -9,51 +9,89 @@ $secondary-font-stack: Poppins, system-ui, -apple-system, BlinkMacSystemFont, 'S
 	Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 
-button {
-	display: flex;
-	align-items: center;
-	flex-grow: 0;
-	flex-shrink: 0;
-	height: 3rem;
-	padding-inline: 30rem;
-    width: 30%;
+// button {
+// 	// display: flex;
+// 	// align-items: center;
+// 	// flex-grow: 0;
+// 	// flex-shrink: 0;
+// 	// height: 3rem;
+// 	// padding-inline: 30rem;
+//   //   width: 30%;
 
-	border-radius: 6rem;
-	border: none;
-	outline: none;
+// 	// border-radius: 6rem;
+// 	// border: none;
+// 	// outline: none;
 	
-	background: white;
-	color: rgba(22, 21, 21, 0.8);
-	cursor: pointer;
+// 	// background: white;
+// 	// color: rgba(22, 21, 21, 0.8);
+// 	cursor: pointer;
 
-	font-family: $secondary-font-stack;
-	font-weight: 800;
-	font-size: 1rem;
-	line-height: 1rem;
-	letter-spacing: 0.015em;
+// 	// font-family: $secondary-font-stack;
+// 	// font-weight: 800;
+// 	// font-size: 1rem;
+// 	// line-height: 1rem;
+// 	// letter-spacing: 0.015em;
 
-	transition: filter 100ms linear;
+// 	transition: filter 100ms linear;
 
-	&.icon-button {
-		display: inline-flex;
+// 	&.icon-button {
+// 		display: inline-flex;
 
-		padding: 0;
-		width: 48rem;
+// 		padding: 0;
+// 		width: 48rem;
 
-		justify-content: center;
-		align-items: center;
-	}
+// 		justify-content: center;
+// 		align-items: center;
+// 	}
 
-	&:hover,
-	&:focus {
-		filter: brightness(0.9);
-	}
-	&:active {
-		filter: brightness(0.8);
-	}
+// 	&:hover,
+// 	&:focus {
+// 		filter: brightness(0.9);
+// 	}
+// 	&:active {
+// 		filter: brightness(0.8);
+// 	}
+// }
+//---------------------------------------------------NEW THINGS--------------------------------------------------------
+
+h1{
+  width: max-content;
 }
 
+.trip-home-page{
+  border: solid;
+  height: 100%;
+  border-radius: 30px;
+  text-align:center;
 
-.category {
-    
 }
+
+.AddItemsComponent{
+  border: solid;
+  height: 100px;
+  border-radius: 30px;
+}
+
+.add-item-category{
+  display:flex;
+  // justify-content: left;
+  width: 50px;
+  align-items: column;
+}
+
+h1{
+  display:flex;
+  width: 100px;
+}
+
+.add-new-category{
+  border: solid;
+  border-radius: 30px;
+  width:min-content;
+  .category-button{
+    font-size: 16px;
+    width: 50px;
+    border: solid;
+  }
+}
+
