--- a/client/scss/LoginPage.scss
+++ b/client/scss/LoginPage.scss
@@ -9,55 +9,57 @@ $secondary-font-stack: Poppins, system-ui, -apple-system, BlinkMacSystemFont, 'S
 	Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 
-button {
-	display: flex;
-	align-items: center;
-	flex-grow: 0;
-	flex-shrink: 0;
-	height: 3rem;
-	padding-inline: 30rem;
-    width: 30%;
+// button {
+// 	display: flex;
+// 	align-items: center;
+// 	flex-grow: 0;
+// 	flex-shrink: 0;
+// 	height: 3rem;
+// 	padding-inline: 30rem;
+//     width: 30%;
 
-	border-radius: 6rem;
-	border: none;
-	outline: none;
+// 	border-radius: 6rem;
+// 	border: none;
+// 	outline: none;
 	
-	background: white;
-	color: rgba(22, 21, 21, 0.8);
-	cursor: pointer;
+// 	background: white;
+// 	color: rgba(22, 21, 21, 0.8);
+// 	cursor: pointer;
 
-	font-family: $secondary-font-stack;
-	font-weight: 800;
-	font-size: 1rem;
-	line-height: 1rem;
-	letter-spacing: 0.015em;
+// 	font-family: $secondary-font-stack;
+// 	font-weight: 800;
+// 	font-size: 1rem;
+// 	line-height: 1rem;
+// 	letter-spacing: 0.015em;
 
-	transition: filter 100ms linear;
+// 	transition: filter 100ms linear;
 
-	&.icon-button {
-		display: inline-flex;
+// 	&.icon-button {
+// 		display: inline-flex;
 
-		padding: 0;
-		width: 48rem;
+// 		padding: 0;
+// 		width: 48rem;
 
-		justify-content: center;
-		align-items: center;
-	}
+// 		justify-content: center;
+// 		align-items: center;
+// 	}
 
-	&:hover,
-	&:focus {
-		filter: brightness(0.9);
-	}
-	&:active {
-		filter: brightness(0.8);
-	}
-}
+	// &:hover,
+	// &:focus {
+	// 	filter: brightness(0.9);
+  //   background-color: aqua; //i did a thing
+	// }
+	// &:active {
+	// 	filter: brightness(0.8);
+	// }
+// }
 
 .login-page {
     display: flex;
     flex-direction: column;
     align-items:center;
     justify-content: center;
+    margin-top: 50px;
     height: 100vh;
     background-image: url('https://4kwallpapers.com/images/wallpapers/os-x-yosemite-half-dome-yosemite-national-park-yosemite-4480x2520-4047.jpg');
     background-repeat: no-repeat;
@@ -142,3 +144,14 @@ button {
       background-color: #3e8e41;
     }
 }
+//##############################
+// .category-button {
+
+//   background-color:orange;
+//   width:1000px;
+//   padding:0px;
+//   align-content: center;
+//   justify-content: center;
+//   width:fit-content;
+
+// }
