--- a/client/scss/LoginPage.scss
+++ b/client/scss/LoginPage.scss
@@ -66,6 +66,10 @@ $secondary-font-stack: Poppins, system-ui, -apple-system, BlinkMacSystemFont, 'S
     background-size: cover;
 }
 
+.login-box {
+  	background-color: rgba(255, 255, 255, 0.7);
+
+} 
 .login-header {
     font-size: 2rem;
     font-weight: bold;
